# graphql-ws-aiohttp

./: .gitremotes  CHANGELOG.rst  CONTRIBUTING.rst  Pipfile  README.rst  setup.cfg
.github/workflows/: code.yml  docs.yml
demo/: aiohttp_server.py  graphiql_template.py
dls_graphql_ws/: __main__.py  abc.py  aiohttp.py  cli.py  protocol.py  server.py  testing.py
docs/: conf.py  index.rst
docs/explanations/: why-is-something-so.rst
docs/how-to/: accomplish-a-task.rst
docs/reference/: api.rst
docs/tutorials/: installation.rst
graphql_ws/: __init__.py  _version_git.py  aiohttp.py  protocol.py  server.py  testing.py
tests/: common.py  test_aiohttp.py  test_boilerplate_removed.py  test_gql.py  test_protocol.py  test_server.py  test_testing.py
